[tool.poetry]
name = "stockscraper"
version = "0.1.0"
description = ""
authors = ["Tomasz Rojek <tomek@rojek.cc>"]

[tool.poetry.dependencies]
python = "^3.8"
pytz = "^2020.1"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
